--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="./now_that_youre_gone.png" alt="Image 4" class="album-art hidden" data-index="3">
         </div>
 
-        <audio src="./call_me_when_you_break_up.m4v" alt="Song 1" class="song" data-index="0"></audio>
+        <audio src="./bluest_flame.m4a" alt="Song 1" class="song" data-index="0"></audio>
         <audio src="./_365.m4a" alt = "Song 2" class="song" data-index="1"></audio>
         <audio src="./hotline_billie.m4a" alt = "Song 3" class="song" data-index="2"></audio>
         <audio src="./now_that_youre_gone.m4a" alt = "Song 4" class="song" data-index="3"></audio>
