--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
             <img src="./i_said_i_love_you_first.png" alt="Image 1" class="album-art" data-index="0">
             <img src="./BRAT.png" alt="Image 2" class="album-art hidden" data-index="1">
             <img src="./hotline_billie.png" alt="Image 3" class="album-art hidden" data-index="2">
-            <img src="./now_that_youre_gone.png" alt="Image 4" class="album-art hidden" data-index="3">
+            <img src="./help_us_stranger.png" alt="Image 4" class="album-art hidden" data-index="3">
+            <img src="./AM.png" alt="Image 5" class="album-art hidden" data-index="4">
+            <img src="./jungle.png" alt="Image 6" class="album-art hidden" data-index="5">
         </div>
 
         <audio src="./bluest_flame.m4a" alt="Song 1" class="song" data-index="0"></audio>
         <audio src="./_365.m4a" alt = "Song 2" class="song" data-index="1"></audio>
         <audio src="./hotline_billie.m4a" alt = "Song 3" class="song" data-index="2"></audio>
         <audio src="./now_that_youre_gone.m4a" alt = "Song 4" class="song" data-index="3"></audio>
+        <audio src="./no1_party_anthem.m4a" alt = "Song 5" class="song" data-index="4"></audio>
+        <audio src="./lets_go_back.m4a" alt = "Song 6" class="song" data-index="5"></audio>
 
         <div class="player-controls">
             <button id="reverse-button"><img src="./pink_rewind_button.png" alt="Reverse"></button>
